    - &which() - like the shell command of the same name
    - &get_mpi_get_names() - return a csv list of all cached MPI get names
                             matching a pattern
    - &SVN::get_r_number() - return the revision number of an SVN workspace
    - &search_and_replace() - perform a search and replace
                              operation on a specified file

- See https://svn.open-mpi.org/trac/mtt/changeset/863:
  - re-wrote funclet parser; MUST edit INI file and remove excess
    quoting
  - new MPI details fields: launcher, parameters, network,
    resource_manager
  - Can escape &, ', " in INI files

- Added optional delimiter parameter to &hostlist() and &hostlist_hosts()

- --section: beware of section names with spaces!  s/ /./g in --section
    arguments if you have spaces in your section names.

- --clean-start: remove MTT sources, installations, and metadata out of
    the scratch directory before running

- --print-cmd-time: Display the amount of time taken in each command
- --print-phases-time: Display the amount of time taken in each phase
- --print-time|-p: Alias for --print-phases-time --print-cmd-time

- @variable@ expansion *everywhere* in ini files (not just in "exec")

- MTT lock server.

- MTT IRC reporter.

- SCM module with the below backend scm_module's:
  - SVN
  - SVK
  - Mercurial
  - Unknown (basically run a shell command)
  --> Users will get warnings but the old "SVN" module will still work
  --> Users encouraged to convert to the new SCM module

- terminate_files field in MTT section.  Defaults to $HOME/mtt-stop
  and &scratch_root()/mtt-stop.  Causes MTT to stop after the current
  test and report all of its results.

- pause_files field in MTT section.  Defaults to $HOME/mtt-pause and
  &scratch_root()/mtt-pause.  Causes MTT to "pause" after the current
  test.  MTT will resume once the pause file has been removed.

- Added support for MPICH2 (and therefore MVAPICH2) and LAM/MPI
